# framewreck

./: CMakeLists.txt  README.md  test.db
resources/: main.template  user.template
src/: main.c
src/core/: server.c  server.h
src/core/map/: map.c
src/core/request/: request.c
src/core/router/: router.c
src/core/strings/: strings.c  strings.h
src/core/views/: view.c  view.h
src/map/: map.c  map.h
src/request/: request.h  response.c  response.h
src/router/: router.h
src/routes/home/: home.h
src/routes/users/: users.h
src/views/: view.c
